<resources>
    <string name="app_name">My ChatAPP</string>
    <string name="login">Login</string>
    <string name="new_account">Create new Account</string>
    <string name="phone">Phone</string>
    <string name="password">Password…</string>
    <string name="email">Email…</string>
    <string name="todo">TODO</string>
    <string name="type_message_here">type message here…</string>
    <string name="write_your_message_here">write your message here…</string>
    <string name="write_phone_number_here">Write phone number here…</string>
    <string name="write_verification_code_here">Write verification code here…</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="verify">Verify Code</string>
    <string name="cancel_chat_request">Cancel Chat Request</string>
    <string name="send_message">Send Message</string>
    <string name="hey_i_m_using_coding_cafe_chat_app">hey i\'m using Coding Cafe chat App.</string>
    <string name="user_name">user name</string>
    <string name="create_account">Create new Account</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="username">username</string>
    <string name="hey_i_am_available_now">hey, i am available now.</string>
    <string name="update">Update</string>
    <string name="display_username">User Name</string>
    <string name="last_seen">Last Seen</string>
    <string name="sender_messages">sender messages</string>
    <string name="receiver_messages_here">receiver messages here</string>
    <string name="user_status">user status</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="forget_password">Forget Password</string>
    <string name="phone_number">Phone number</string>
    <string name="verification_code_here">Verification code</string>
    <string name="hey_i_m_using_chat_app">hey i\'m using chat App.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sender_time">Sender_time</string>
    <string name="time_of_sender">time of sender</string>
    <string name="name">Name</string>
    <string name="view_without_security_key">View without decrypt</string>
    <string name="create_new_security_key">Create new security key</string>
    <string name="settings">Settings</string>
    <string name="find_friends">Find Friends</string>
    <string name="create_group">Create Group</string>
    <string name="logout">Logout</string>
    <string name="information">Information</string>
    <string name="_0">0</string>
    <string name="user_setup">User Setup</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="group_administrator">Group Administrator</string>
    <string name="add_user_to_group">Add user to group</string>
    <string name="view_group_users">View group users</string>
    <string name="get_out_from_group">Get out from group</string>
    <string name="change_group_name">Change group name</string>
    <string name="change_crypt_key">Change crypt key</string>
    <string name="delete_user">Delete user</string>
    <string name="delete_group">Delete group</string>
    <string name="call">CALL</string>
    <string name="melody_1">Melody_1</string>
    <string name="melody_2">Melody_2</string>
    <string name="ring_melody">Ring Melody</string>
    <string name="incoming_call_user">Incoming Call</string>
    <string name="hang_up">Hang up</string>
</resources>
