<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/find_friends"
        android:id="@+id/main_find_friends_option"
        app:showAsAction="never"> </item>

    <item
        android:title="@string/create_group"
        android:id="@+id/main_create_group_option"
        app:showAsAction="never"> </item>

    <item
        android:title="@string/user_setup"
        android:id="@+id/user_settings"
        app:showAsAction="never"> </item>

    <item
        android:title="@string/settings"
        android:id="@+id/main_settings_option"
        app:showAsAction="never">

        <menu>
            <item android:id="@+id/sound"
                android:title="@string/sound"
                android:checkable="true"
                android:checked="true"/>
            <item android:id="@+id/vibration"
                android:title="@string/vibration"
                android:checkable="true"
                android:checked="true"/>
        </menu>
    </item>

    <item
        android:title="@string/ring_melody"
        android:id="@+id/menu_melody"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/melody1"
                    android:title="@string/melody_1"
                    android:checked="true"/>
                <item android:id="@+id/melody2"
                    android:title="@string/melody_2" />
            </group>
        </menu>
    </item>

    <item
        android:title="@string/logout"
        android:id="@+id/main_logout_option"
        app:showAsAction="never"> </item>
</menu>