<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/singup_photo"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_image"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/inputs"
        android:padding="1dp"
        android:drawableStart="@drawable/email"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="20dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_email"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/inputs"
        android:padding="1dp"
        android:drawableStart="@drawable/password"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:padding="4dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="65dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="@android:color/holo_red_light"
        android:background="@drawable/buttons" />

    <TextView
        android:id="@+id/already_have_account_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_button"
        android:text="@string/already_have_an_account"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center_horizontal" />
</RelativeLayout>