<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/colorPrimaryDark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/custom_profile_image"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/profile_image"
        android:cropToPadding="true"
        android:layout_marginEnd="10dp" />

    <Button
        android:id="@+id/btnCalling"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="60dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/btn_accept"
        android:text="@string/call" />


    <TextView
        android:id="@+id/custom_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/display_username"
        android:textColor="@color/colorYellow"
        android:textStyle="bold"
        android:textSize="22sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/custom_user_last_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_profile_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:text="@string/last_seen"
        android:textColor="@android:color/holo_blue_bright"
        android:textStyle="bold"
        android:textSize="12sp" />

</RelativeLayout>