<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/login_photo"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_image"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/inputs"
                android:padding="1dp"
                android:drawableStart="@drawable/email"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_email"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/inputs"
                android:padding="1dp"
                android:drawableStart="@drawable/password"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp" />

            <LinearLayout
                android:id="@+id/lineLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/login_password"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:textColor="@android:color/background_light"
                    android:background="@drawable/buttons" />

                <TextView
                    android:id="@+id/forget_password_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:layout_marginTop="2dp"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linePhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/lineLogin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/phone_login_button"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/phone"
                    android:textSize="24sp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:background="@drawable/buttons"
                    android:drawableStart="@drawable/phone" />

                <TextView
                    android:id="@+id/need_new_account_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_account"
                    android:layout_marginTop="2dp"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center_horizontal" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>