<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ProfileActivity">

    <include
        android:id="@+id/activity_profile_toolbar"
        layout="@layout/app_bar_layout" />

    <RelativeLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_below="@+id/activity_profile_toolbar"
        android:layout_height="match_parent"
        android:background = "@drawable/fuelback">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/visit_profile_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile_image" />

    <TextView
        android:id="@+id/visit_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_below="@+id/visit_profile_image"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/visit_profile_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hey_i_m_using_chat_app"
        android:layout_below="@+id/visit_user_name"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/send_message_request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/visit_profile_status"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="65dp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/buttons"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/send_message"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/decline_message_request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_message_request_button"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="65dp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/buttons"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/cancel_chat_request"
        android:textAllCaps="false"
        android:visibility="invisible" />

    </RelativeLayout>

</RelativeLayout>