<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".PhoneLoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_phone"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:background="@drawable/phone_set" />
    <EditText
        android:id="@+id/phone_nnumber_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/image_phone"
        android:background="@drawable/inputs"
        android:padding="2dp"
        android:paddingEnd="10dp"
        android:hint="@string/phone_number"
        android:textAllCaps="false"
        android:textSize="32sp"
        android:drawableStart="@drawable/phone"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/verification_code_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:paddingEnd="15dp"
        android:background="@drawable/inputs"
        android:layout_below="@+id/phone_nnumber_input"
        android:padding="2dp"
        android:hint="@string/verification_code_here"
        android:textAllCaps="false"
        android:textSize="28sp"
        android:drawableStart="@drawable/password"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />

    <Button
        android:id="@+id/send_ver_code_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_verification_code"
        android:layout_below="@+id/verification_code_input"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttons"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Button
        android:id="@+id/verify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:layout_below="@+id/send_ver_code_button"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttons"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="visible" />
</RelativeLayout>