<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/users_profile_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/profile_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_margin="2dp"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/user_online_status"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/online"
                    android:visibility="invisible"/>
            </LinearLayout>

            <TextView
                android:id="@+id/user_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_status"
                android:layout_margin="2dp"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/request_accept_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/accept"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_accept"
                    android:visibility="invisible"/>

                <Button
                    android:id="@+id/request_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/cancel"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_cancel"
                    android:textColor="@android:color/background_light"
                    android:visibility="invisible"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>