<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_incoming_call">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/incoming_user_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/profile_image" />

    <TextView
        android:id="@+id/incoming_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/incoming_call_user" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/incoming_accept_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@+id/incoming_cancel_btn"
            android:background="@drawable/btn_accept"
            android:onClick="onClickAcceptIncomingCall"
            android:text="@string/accept"
            android:textAllCaps="false"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/incoming_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_cancel"
            android:onClick="onClickCancelIncomingCall"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>